# CV_middleproject_zzz

./: .gitignore  CMakeLists.txt
apps/: main.cpp  main_di_prova.cpp
include/: feature.h  featureList.h  imageIterator.h  utils.h  utils_di_prova.hpp
src/: feature.cpp  featureList.cpp  imageIterator.cpp  utils.cpp  utils_di_prova.cpp
